added intro and blogs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <title>Dev Portfolio</title>
 </head>
 <body>
-    
+   
+    <div class="content">
+
+        <div class="grid">
+<div class="intro about">
+<h1>Hi I am Rutik Wankhade</h1>
+<p>I am a frontend developer, who loves building cool stuff with javascript</p>
+</div>
+<div class="intro">
+<img src="browser-stats-concept-illustration_114360-312.jpg" class="illustration">
+</div>
+
+        </div>
+
+
+        
+</div>
+
+<div class="blogs">
+<div class="content">
+<h2 class="title">Latest Blogs</h2>
+
+<div class="blog-card">A step by step guide to functions</div>
+<div class="blog-card">Learn javascript concepts by building a random quote generator</div>
+<div class="blog-card">Github repos every aspiring developer should know</div>
+
+</div> 
+</div> 
+<!-- 
+<div class="content">
+<h2 class="title">Projects</h2>
+<div class="projects">
+<div class="project">xyz</div>
+<div class="project">sdfd</div>
+<div class="project">adad</div>
+</div>
+</div> -->
+
 </body>
 </html>
