added intro and blogs section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>I am a frontend developer, who loves building cool stuff with javascript</p>
 </div>
 <div class="intro">
-<img src="browser-stats-concept-illustration_114360-312.jpg" class="illustration">
+<img src="Images/dev illustration.jpg" class="illustration">
 </div>
 
         </div>
