added projects section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </div> 
 </div> 
-<!-- 
+
 <div class="content">
 <h2 class="title">Projects</h2>
 <div class="projects">
@@ -43,7 +43,9 @@
 <div class="project">sdfd</div>
 <div class="project">adad</div>
 </div>
-</div> -->
+</div>
 
+<footer> Build with love By Rutik Wankhade</footer>
 </body>
+
 </html>
