fontawesome icons and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.css">
-    <title>Dev Portfolio</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+   <title>Dev Portfolio</title>
 </head>
 <body>
    
@@ -14,6 +17,9 @@
 <div class="intro about">
 <h1>Hi I am Rutik Wankhade</h1>
 <p>I am a frontend developer, who loves building cool stuff with javascript</p>
+<i class="fa icon fa-twitter" aria-hidden="true"></i>
+<i class="fa fa-github" aria-hidden="true"></i>
+
 </div>
 <div class="intro">
 <img src="Images/dev illustration.jpg" class="illustration">
@@ -29,7 +35,7 @@
 <div class="content">
 <h2 class="title">Latest Blogs</h2>
 
-<div class="blog-card">A step by step guide to functions</div>
+<div class="blog-card"><a href="https://github.com/rutikwankhade/Dev-Portfolio">A step by step guide to functions</a></div>
 <div class="blog-card">Learn javascript concepts by building a random quote generator</div>
 <div class="blog-card">Github repos every aspiring developer should know</div>
 
