--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <div class="intro about">
 <h1>Hi I am Rutik Wankhade</h1>
 <p>I am a frontend developer, who loves building cool stuff with javascript</p>
-<i class="fa icon fa-twitter" aria-hidden="true"></i>
-<i class="fa fa-github" aria-hidden="true"></i>
+<i class="fa icon fa-twitter fa-2x " aria-hidden="true"></i>
+<i class="fa fa-github fa-2x " aria-hidden="true"></i>
+<i class="fa fa-linkedin fa-2x " aria-hidden="true"></i>
 
 </div>
 <div class="intro">
@@ -36,20 +37,31 @@
 <h2 class="title">Latest Blogs</h2>
 
 <div class="blog-card"><a href="https://github.com/rutikwankhade/Dev-Portfolio">A step by step guide to functions</a></div>
-<div class="blog-card">Learn javascript concepts by building a random quote generator</div>
-<div class="blog-card">Github repos every aspiring developer should know</div>
+<div class="blog-card"><a href="xyz.com">Learn javascript concepts by building a random quote generator</a></div>
+<div class="blog-card"><a href="xyz.com">Github repos every aspiring developer should know</a></div>
 
-</div> 
-</div> 
 
-<div class="content">
 <h2 class="title">Projects</h2>
 <div class="projects">
-<div class="project">xyz</div>
-<div class="project">sdfd</div>
-<div class="project">adad</div>
+
+<div class="project">
+    <h3>XYZ project</h3>
+    <p>This is a xyz project that does xyz stuff</p>
+    <a href="https://link.com">Link</a>
+
 </div>
+<div class="project">
+    <h3>XYZ project</h3>
+    <p>This is a xyz project that does xyz stuff</p>
+    <a href="https://link.com">Link</a>
 </div>
+
+</div>
+</div> 
+</div> 
+
+
+
 
 <footer> Build with love By Rutik Wankhade</footer>
 </body>
